--- a/app/views/plates/_form.html.erb
+++ b/app/views/plates/_form.html.erb
@@ -12,6 +12,16 @@
   <% end %>
 
   <div class="field">
+    <%= form.label :restaurant_id %>
+    <%= form.select :restaurant_id, Restaurant.all.collect { | restaurant | [restaurant.nome, restaurant.id]} %>
+  </div>
+
+  <div class="field">
+    <%= form.label :ingredient_id %>
+    <%= form.select :ingredient_id , Ingredient.all.collect { | ingredient | [ingredient.descricao, ingredient.id]}%>
+  </div>
+
+  <div class="field">
     <%= form.label :descricao %>
     <%= form.text_field :descricao %>
   </div>
