C4 - criação das associações e teste cadastro

--- a/app/views/plates/_form.html.erb
+++ b/app/views/plates/_form.html.erb
@@ -16,9 +16,16 @@
     <%= form.select :restaurant_id, Restaurant.all.collect { | restaurant | [restaurant.nome, restaurant.id]} %>
   </div>
 
+  <!--div class="field">
+    <!--%= form.label :ingredient_id %>
+    <!--%= form.select :ingredient_id , Ingredient.all.collect { | ingredient | [ingredient.descricao, ingredient.id]}%>
+  </div-->
+
   <div class="field">
-    <%= form.label :ingredient_id %>
-    <%= form.select :ingredient_id , Ingredient.all.collect { | ingredient | [ingredient.descricao, ingredient.id]}%>
+    <%= Ingredient.all.each do | ingredient | %>
+      <%= check_box_tag "plate[ingredient_ids][]", ingredient.id%>
+      <%= ingredient.descricao %><br>
+    <% end %>
   </div>
 
   <div class="field">
