--- a/app/views/plates/index.html.erb
+++ b/app/views/plates/index.html.erb
@@ -8,6 +8,7 @@
       <th>Descricao</th>
       <th>Preco</th>
       <th>Tempopreparo</th>
+      <th>Ingredients</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= plate.descricao %></td>
         <td><%= plate.preco %></td>
         <td><%= plate.tempopreparo %></td>
+        <td><!--%= plate.ingredient.descricao ></td-->
         <td><%= link_to 'Show', plate %></td>
         <td><%= link_to 'Edit', edit_plate_path(plate) %></td>
         <td><%= link_to 'Destroy', plate, method: :delete, data: { confirm: 'Are you sure?' } %></td>
