C6 - Front da Homepage e formatação dos dados

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,5 +1,5 @@
-<!--ul>
-  <li><!--%= link_to 'Restaurants', restaurants_path %></li>
-  <li><!--%= link_to 'Plates', plates_path %></li>
-  <li><!--%= link_to 'Ingredients', ingredients_path %></li>
+<ul>
+  <li><%= link_to 'Restaurants', restaurants_path %></li>
+  <li><%= link_to 'Plates', plates_path %></li>
+  <li><%= link_to 'Ingredients', ingredients_path %></li>
 </ul>
