--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,3 +1,71 @@
-// Place all the styles related to the restaurants controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// restaurants
+#conteudo{
+  width: 980px;
+  margin: 0 auto;
+  color: #363636;
+}
+
+h1, h2, h3, h4{
+  text-transform: capitalize;
+}
+
+#plates > .plates_itens{
+  list-style-type: none;
+  overflow: hidden;
+  padding: 0;
+}
+
+#plates > .plates_itens > .plate_item{
+  list-style: none;
+  width: 48%;
+  float: left;
+  background-color: #F7F7F7;
+  margin: 0.2rem;
+  padding: 0.4rem;
+}
+#plates > .plates_itens > .plate_item > .titulo > .descricao {
+  padding: 1.4rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  background-color: #E9E6E6;
+  float: left;
+  width: 55%;
+  text-transform: capitalize;
+}
+#plates > .plates_itens > .plate_item > .titulo > .preco {
+  font-size: 1.1rem;
+  background-color: #E9E6E6;
+  padding: 1.4rem;
+  float: right;
+  width: 25%;
+  text-align: left;
+}
+#plates > .plates_itens > .plate_item > .info{
+  float: left;
+}
+
+#plates > .plates_itens > .plate_item > .info > .ingredientes{
+  font-size: 0.8rem;
+  font-weight: 800;
+  text-transform: capitalize;
+
+}
+#plates > .plates_itens > .plate_item > .info > .ingredientes span{
+  font-size: 0.8rem;
+  font-weight: normal;
+  text-transform: capitalize;
+}
+
+#plates > .plates_itens > .plate_item > .info > .tempopreparo {
+}
+
+#plates > .plates_itens > .plate_item > .fotos {
+  background: #e9e6e6;
+  width: 45%;
+  height: 200px;
+  float: right;
+  margin-top: 0.3em;
+  text-align: center;
+}
+
+
