--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   </head>
 
   <body>
-    <!--%= render '/layouts/menu' %-->
-    <%= yield %>
+    <div id="conteudo">
+      <%= yield %>
+      <%= render '/layouts/menu' %>
+    </div>
   </body>
 </html>
