C7 - Ajuste ordenação dos ingredientes

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -56,6 +56,10 @@ h1, h2, h3, h4{
   text-transform: capitalize;
 }
 
+#plates > .plates_itens > .plate_item > .info > .ingredientes ul{
+  padding-left: 20px;
+}
+
 #plates > .plates_itens > .plate_item > .info > .tempopreparo {
 }
 
