--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,5 @@
 <ul>
+  Navegação para avaliação
   <li><%= link_to 'Restaurants', restaurants_path %></li>
   <li><%= link_to 'Plates', plates_path %></li>
   <li><%= link_to 'Ingredients', ingredients_path %></li>
