--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,6 +1,6 @@
-<ul>
-  Navegação para avaliação
-  <li><%= link_to 'Restaurants', restaurants_path %></li>
-  <li><%= link_to 'Plates', plates_path %></li>
-  <li><%= link_to 'Ingredients', ingredients_path %></li>
+<ul class="menu_itens">
+  <li class="menu_item"><%= link_to 'Home', homepage_restaurants_path %></li>
+  <li class="menu_item"><%= link_to 'Restaurants', restaurants_path %></li>
+  <li class="menu_item"><%= link_to 'Plates', plates_path %></li>
+  <li class="menu_item"><%= link_to 'Ingredients', ingredients_path %></li>
 </ul>
